<resources>
    <string name="app_name">ShoeStore</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- field label -->
    <string name="email_field_label">Email</string>
    <string name="password_field_label">Password</string>
    <!-- button label -->
    <string name="login_button_label">Login</string>
    <string name="sign_up_button_label">Sign up</string>
    <!-- navigation -->
    <string name="navigate_to_instructions_button_label">Go to instructions</string>
    <string name="navigate_to_shoe_list_button_label">Go to shoe list</string>
    <!-- welcome screen -->
    <string name="welcome_title">Welcome</string>
    <string name="welcome_body_content">The Android framework manages the lifecycles of UI controllers, such as activities and fragments. The framework may decide to destroy or re-create a UI controller in response to certain user actions or device events that are completely out of your control.</string>
    <!-- instruction screen -->
    <string name="instruction_title">Instructions</string>
    <string name="instructions_body_content">View the shoe list by clicking on %s</string>

    <!-- shoe list screen -->
    <string name="add_shoe_button_label">Add shoe</string>

    <!-- shoe detail screen -->
    <string name="shoe_name_label">Shoe name</string>
    <string name="company_name_label">Company name</string>
    <string name="shoe_size_label">Shoe size</string>
    <string name="description_label">Shoe description</string>
    <string name="save_shoe_detail_button_label">Save shoe</string>
    <string name="cancel_shoe_detail_button_label">Cancel</string>
    <!-- menu button -->
    <string name="log_out">Log out</string>
</resources>
