<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".WelcomeFragment">

        <TextView
            android:id="@+id/welcome_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/welcome_title"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/welcome_body_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_body_content"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/welcome_title" />

        <Button
            android:id="@+id/navigate_to_instructions_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/navigate_to_instructions_button_label"
            app:layout_constraintTop_toBottomOf="@id/welcome_body_content" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>