<?xml version="1.0" encoding="utf-8"?>

<data>
    <variable
        name="shoe"
        type="com.udacity.shoestore.models.Shoe" />
    <variable
        name="ShoeListViewModel"
        type="com.udacity.shoestore.models.ShoeListViewModel" />
</data>

<androidx.constraintlayout.widget.ConstraintLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".ShoeDetailFragment"
>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/shoe_detail_constraint_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        >
        <TextView
            android:id="@+id/shoe_name_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/shoe_name_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <EditText
            android:id="@+id/shoe_name_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="@={shoe.name}"
           app:layout_constraintTop_toBottomOf="@+id/shoe_name_label"
           />
        <TextView
            android:id="@+id/company_name_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/company_name_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/shoe_name_label" />

        <EditText
            android:id="@+id/company_name_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="@={shoe.company}"
            app:layout_constraintTop_toBottomOf="@+id/shoe_name_label" />

        <TextView
            android:id="@+id/shoe_size_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/shoe_size_label"
            app:layout_constraintTop_toBottomOf="@+id/company_name_input" />

        <EditText
            android:id="@+id/shoe_size_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number|numberDecimal"
            android:text="@={`` + shoe.size}"
            app:layout_constraintTop_toBottomOf="@+id/shoe_size_label" />

        <TextView
            android:id="@+id/description_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/description_label"
            app:layout_constraintTop_toBottomOf="@+id/shoe_size_input" />

        <EditText
            android:id="@+id/description_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="@={shoe.description}"
            app:layout_constraintTop_toBottomOf="@+id/description_label" />

    </androidx.constraintlayout.widget.ConstraintLayout>
    <LinearLayout
        android:id="@+id/shoe_detail_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/shoe_detail_constraint_layout">

        <Button
            android:id="@+id/save_shoe_detail_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="@{(view) -> ShoeListViewModel.onSave(view, shoe)}"
            android:text="@string/save_shoe_detail_button_label" />

        <Button
            android:id="@+id/cancel_shoe_detail_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cancel_shoe_detail_button_label" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>





